# urban-heat

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierrc  Caddyfile  Dockerfile  Makefile  README.md  annual_stats.py  biome.json  compose.yml  endpoints.http  extract_raw.py  index.html  pyproject.toml  s3-cors.xml  site.webmanifest  sitemap.txt
.github/workflows/: build.yml  build_app.yml  build_service.yml
app/: index.html  package-lock.json  package.json  third-party-licenses.txt  vite.config.ts
app/public/: browserconfig.xml  site.webmanifest  sitemap.txt
app/src/: App.css  App.tsx  Chart.tsx  ContourExample.tsx  Map.tsx  contour.worker.ts  index.css  index.tsx  main.tsx  router.tsx  stores.tsx  utils.tsx  vite-env.d.ts
app/src/components/: AboutButton.tsx  AboutModal.tsx  ActionBar.tsx  ActionBarItem.tsx  App.tsx  ApplyButton.tsx  CloseButton.tsx  ContolsButton.tsx  Contours.tsx  ControlPanel.tsx  Controls.tsx  ControlsForm.tsx  ControlsItem.tsx  ControlsPanel.tsx  ControlsToggle.tsx  HideButton.tsx  Legend.tsx  Map.css  Map.tsx  MapCanvas.tsx  MapLoader.tsx  OpenButton.tsx  ProcessingStatus.tsx  Progress.tsx  RouteChangeHandler.tsx  Search.tsx  SiteMap.tsx  StyleMenu.tsx  StyleSelector.tsx  Title.tsx  Tooltip.tsx  UpdateButton.tsx
app/src/geometry/: Contours.tsx  contour.tsx  contour.worker.ts  utils.tsx  worker.ts  workers.tsx
assets/: contour.worker-7vWzDuSY.js  index-BidV_D1v.js  index-C_47G0ST.css  index-DZUM-tiW.js  index-VsVoXEGH.js
geometry/: extent.gpkg
pipelines/: annual_stats.py  pyproject.toml
pipelines/urban_heat_pipelines/: annual_stats.py  prepare_raw_images.py
processing/: __init__.py  annual_stats.py  prepare_raw_images.py  process_raw.py
scripts/: README.md  pyproject.toml  update_urban_extents.py
scripts/pipelines/: __init__.py  annual_stats.py  download.py  prepare_raw_images.py  query.py
scripts/tasks/: annual_stats.py  download.py  prepare_raw_images.py  query.py
service/: Dockerfile  README.md  endpoints.http  pyproject.toml
service/scripts/: update_urban_extents.py
service/tasks/: __init__.py  annual_stats.py  download.py  inventory.py  prepare_raw_images.py  query.py
service/urban_heat/: __init__.py  main.py  models.py  sources.py
service/urban_heat/tasks/: __init__.py  add_country.py  download.py  generate_stats.py  inventory.py  prepare_data_source.py  prepare_raw_images.py  process_country.py  update_extents.py  update_urban_extents.py
urban_heat/: __init__.py  main.py  models.py
urban_heat/tasks/: __init__.py  add_country.py  collect_country.py  data_sources.py  download.py  inventory.py  populate_extents.py  prepare_data.py  prepare_data_source.py  process_country.py  upload.py  upload_data.py
viz/: package.json
viz/src/: App.tsx  Map.css  Map.tsx
