[tool.poetry]
name = "urban-heat"
version = "2024"
description = "A simple backend supporting the Urban Heat Map"
authors = ["Damien Allen <dev@dallen.co>"]
readme = "README.md"

# package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.110.1"
beanie = "^1.25.0"
pydantic = "^2.7.0"

httpx = "^0.27.0"
rasterio = "^1.3.9"
geopandas = "^0.14.3"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"


[tool.black]
line-length = 99

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
