[project]
name = "urban-heat"
version = "2026.1"
description = "A simple backend supporting the Urban Heat app"

authors = [{ name = "Damien Allen", email = "dev@dallen.co" }]
license = "AGPL-3.0"
readme = "README.md"

requires-python = ">=3.13,<3.14"

dependencies = [
    "beanie==2.0.1",
    "fastapi==0.128.3",
    "granian>=2.7.0",
    "pydantic==2.12.5",
]

[dependency-groups]
tasks = [
    "aiofiles==25.1.0",
    "aiotinydb==2.0.0",
    "boto3==1.42.43",
    "httpx==0.28.1",
    "geopandas==0.14.4",
    "rasterio==1.5.0",
    "tinydb==4.8.2",
    "tqdm==4.67.3",
    "typer==0.21.1",
]

dev = ["types-aiofiles==25.1.0.20251011", "types-pyyaml==6.0.12.20240311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tasks/*" = ["E712"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"
