[tool.poetry]
name = "pipelines"
version = "2024"
description = "Processing pipelines for remote sensing data"
authors = ["Damien Allen <dev@dallen.co>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.12"

httpx = "^0.27.0"
rasterio = "^1.3.9"
geopandas = "^0.14.3"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
