[tool.poetry]
name = "urban_heat"
version = "2024"
description = "A simple backend supporting the Urban Heat Map"
authors = ["Damien Allen <dev@dallen.co>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.12"

beanie = "^1.25.0"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
